# luchs

./: .gitignore  README.md  pyproject.toml  rsync.sh
Docker/: Dockerfile  docker-compose.yml
config/: test.yaml
models/: models.py
preprocess/: instances.py  iterators.py
training/: training.py
wandb/: latest-run
wandb/run-20231031_122507-443quffe/: run-443quffe.wandb
wandb/run-20231031_122507-443quffe/files/: config.yaml  wandb-metadata.json
wandb/run-20231031_122610-2ax21vzv/: run-2ax21vzv.wandb
wandb/run-20231031_122610-2ax21vzv/files/: config.yaml  wandb-metadata.json
wandb/run-20231031_122730-pzhfrtig/: run-pzhfrtig.wandb
wandb/run-20231031_122730-pzhfrtig/files/: config.yaml  wandb-metadata.json
wandb/run-20231031_122805-nr0mq566/: run-nr0mq566.wandb
wandb/run-20231031_122805-nr0mq566/files/: config.yaml  wandb-metadata.json
wandb/run-20231031_122907-a0w1qc8f/: run-a0w1qc8f.wandb
wandb/run-20231031_122907-a0w1qc8f/files/: config.yaml  requirements.txt  wandb-metadata.json
